--- a/sass/shared/_variables.scss
+++ b/sass/shared/_variables.scss
@@ -7,4 +7,7 @@
    $default-size:14px;
    
    // Font Family
-   $default-font:'Open Sans';
+
+
+   // Medical Center
+   $medical-center-background-color:#f5f5f5;
