--- a/sass/components/_cardDoctor.scss
+++ b/sass/components/_cardDoctor.scss
@@ -1,5 +1,6 @@
 .cardDoctor {
-    
+ 
+
     padding: 50px 10px 47px;
     background: white;
     overflow: hidden;
@@ -9,7 +10,7 @@
     margin-bottom:50px ;
    
     .doctorContent {
-    
+        width: 100%;
 
         position: relative;
      
