--- a/sass/media-query/_media_query.scss
+++ b/sass/media-query/_media_query.scss
@@ -15,7 +15,12 @@
         margin-top: initial !important;
 
 }
+.professionalDoctor {
+    width: 70% !important;
+   margin: auto;
+}
 
+}
 @media screen and (max-width:768px) {
 
     .cardTestimonials {
@@ -54,10 +59,14 @@
     .medicalCenterImg {
         display: none;
     }
-    .memberArrow{
-        margin-top:0px !important;
+    .medicalCounter {
+        margin-top: 46px !important;
+       
     }
-
+    .medicalCenterText h2 {
+        font-size: 30px;
+        line-height: 40px
+    }
     .cmsCounterTitle {
         padding-bottom: 50px !important;
     }
@@ -66,16 +75,28 @@
         display: block !important;
     }
 
-    .medicalCounter {
-        margin-top: 0px !important;
-    }
 
 
 }
-}
+
 @media screen and(max-width:332px){
     .medicalCenterText {
         padding-left: 201.5px !important;
         height: 100%;
+    }
+  
+}
+
+
+@media screen and (max-width:1260px){
+    .professionalDoctor {
+        width: 100% !important;
+       
+    }
+}
+
+@media screen and(max-width:320px){
+    .testimonialsSlider{
+        width: 430px !important;
     }
 }
