--- a/sass/components/_medicalCenter.scss
+++ b/sass/components/_medicalCenter.scss
@@ -1,30 +1,33 @@
-.col-sm-6 ,.col-lg-6{
-    padding: 0px;
-} 
-.medicalCenterContainer {
 
+
+.medicalCenterContainer {
+    overflow-x: hidden;
     display: flex;
     flex-wrap: nowrap !important;
     background-color: $medical-center-background-color;
 
     width: 100%;
     position: relative;
-    // overflow-x: hidden !important;
 
-    .container-fluid {
-        padding-right: 0px;
-        padding-left: 0px;
-        margin: 0px;
+   
+  
         .medicalCenterText {
-            padding-left: 191.5px;
+      
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 27%;
+            margin: auto;
             padding-top: 79px;
+        max-width: 100%;
+            text-align: center;
 
             h2 {
                 font-size: 36px;
                 color: #303030;
                 line-height: 52px;
                 text-align: inherit;
-                margin: 0 0 15px;
+                // margin: 0 0 15px;
             }
 
             .color-default {
@@ -35,17 +38,17 @@
                 font-size: 15px;
                 line-height: 26px;
                 color: #888888;
-                margin: 0 0 15px;
+               width: 100px !important;
                 margin-bottom: 35px;
-                box-sizing: border-box;
+         
             
-                padding-right: 15px;
+           
                 width: 100% !important;
             }
 
             ul {
                 list-style: none;
-                padding: 0;
+           text-align: center;
                 padding-top: 24px;
 
                 li {
@@ -53,7 +56,7 @@
                     display: flex;
                     padding-bottom: 14px;
                     font-weight: 600;
-
+                
                     i {
                         color: $content-color;
                         padding-right: 28px;
@@ -66,15 +69,14 @@
         }
 
         .medicalCenterImg {
+            width: 50%;
             .medicalImg img {
                
-                max-width: 100%;
-                height: 100%;
                 object-fit: cover;
 
             }
         }
-    }
+    
 
 
 }
