--- a/sass/components/_indexCardDoctor.scss
+++ b/sass/components/_indexCardDoctor.scss
@@ -3,7 +3,7 @@
 
     padding: 50px 10px 47px;
     background: white;
-    overflow: hidden;
+    // overflow: hidden;
     box-shadow: 0 0 10px rgba(48, 48, 48, 0.1);
     transition: .6s;
     text-align: center;
