--- a/sass/components/_indexMedicalCenter.scss
+++ b/sass/components/_indexMedicalCenter.scss
@@ -1,7 +1,7 @@
 
 
 .medicalCenterContainer {
-    overflow-x: hidden;
+    // overflow-x: hidden;
     display: flex;
     flex-wrap: nowrap !important;
     background-color: $medical-center-background-color;
