--- a/sass/components/_inexTestimonialsContainer.scss
+++ b/sass/components/_inexTestimonialsContainer.scss
@@ -2,7 +2,7 @@
     padding-top: 82px;
     background-color: #f5f5f5 !important;
     position: relative;
-
+    overflow-x: hidden;
     .testimonialsTitle {
         h6 {
             color: rgba(0, 125, 242, 1);
