--- a/sass/media-query/_media_query.scss
+++ b/sass/media-query/_media_query.scss
@@ -1,5 +1,8 @@
 @media screen and (max-width:1024px) {
-
+    .medicalCenterImg{
+       overflow: hidden !important;
+    
+    }
 
     .container {
         padding-right: 0px;
@@ -13,8 +16,8 @@
 
 }
 .professionalDoctor {
-    width: 70% !important;
-   margin: auto;
+    width: 94% !important;
+    margin: auto;
 }
 .medicalCenterText {
     width: 100% !important;
@@ -22,12 +25,13 @@
 }
 }
 @media screen and (max-width:768px) {
-
+ 
+    
     .cardTestimonials {
         padding: 0 15px 46px;}
 
     .medicalCenterCount {
-        flex-direction: column;
+        flex-direction: row;
         text-align: center;
 
     }
@@ -39,25 +43,36 @@
         display: none !important;
     
     }
+    .lastestNewsSlider {
+  
+        
+        overflow: hidden !important;
 }
 
 
     .medicalCenterCount .counter-wrap1:last-child {
         display: none !important;
     }
-    .lastestNewsTitle{
+    .lastestNewsTitle, .professionalDoctorRow{
+      
         display: block !important;
           justify-content: initial !important;
     }
+    .testimonialsTitle h2{
+        font-size: 24px !important;
+        line-height: 40px !important;
+    }
+      .professionalDoctorRow{
+        width: 86% !important;
+        margin: auto;
+    }
 
- 
-
-
-@media screen and (max-width:992px) {
 }
 
-@media screen and (max-width:576px) {
 
+@media screen and (max-width:576px) {
+  
+  
     .medicalCenterImg{
         display: none;
 
@@ -79,14 +94,16 @@
         display: block !important;
     }
 
+    .medicalCenterCount {
+        flex-direction: column;
+        text-align: center;
 
-
-}
-
-@media screen and(max-width:332px){
+    }
  
-  
+
 }
+
+
 
 
 @media screen and (max-width:1260px){
@@ -99,5 +116,14 @@
 @media screen and(max-width:320px){
     .testimonialsSlider{
         width: 430px !important;
+    }
+    .testimonialsTitle h2{
+        font-size: 20px !important;
+        line-height: 40px !important;
+    }
+}
+@media screen and (max-width:1160px){
+    .professionalDoctor {
+    width: 100% !important;
     }
 }
